# Faahhder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: manifest.faahhder
assets/scripts/: player.lua
assets/textures/: tiles.ppm
examples/snake/: project.faahhder
examples/snake/assets/: manifest.faahhder  snake.faahhder
examples/snake/assets/scenes/: sample_scene.faahhder.json
examples/snake/assets/scripts/: player.lua  snake.logic
examples/snake/assets/textures/: player.ppm
scripts/: build.ps1  build_project.ps1  export.ps1
src/Faahhder/: CMakeLists.txt
src/Faahhder/src/: main.cpp
src/FaahhderGame/: CMakeLists.txt
src/FaahhderGame/src/: main.cpp
src/FaahhderRuntime/: CMakeLists.txt
src/FaahhderRuntime/include/Faahhder/: Application.hpp  Assets.hpp  AuthoringTools.hpp  CodeWorkspace.hpp  Components.hpp  Diagnostics.hpp  EditorModel.hpp  EditorPanels.hpp  EditorPreferences.hpp  EditorState.hpp  Event.hpp  ExampleProject.hpp  ExportPipeline.hpp  ExportSummary.hpp  ExportTools.hpp  Faahhder.hpp  GameplayTools.hpp  Input.hpp  Math.hpp  Packaging.hpp  Physics.hpp  ProjectEditing.hpp  ProjectHealth.hpp  QualityReport.hpp  QualityTools.hpp  RenderPhysicsPlanning.hpp  Renderer2D.hpp  Runtime2D.hpp  RuntimeQueries.hpp  Scene.hpp  SceneManager.hpp  Scripting.hpp  SnakeAuthoring.hpp  TilemapAuthoring.hpp  Window.hpp
src/FaahhderRuntime/src/: Application.cpp  Assets.cpp  AuthoringTools.cpp  CodeWorkspace.cpp  Diagnostics.cpp  EditorModel.cpp  EditorPanels.cpp  EditorPreferences.cpp  EditorState.cpp  Event.cpp  ExampleProject.cpp  ExportPipeline.cpp  ExportSummary.cpp  ExportTools.cpp  GameplayTools.cpp  Input.cpp  Math.cpp  Packaging.cpp  Physics.cpp  ProjectEditing.cpp  ProjectHealth.cpp  QualityReport.cpp  QualityTools.cpp  RenderPhysicsPlanning.cpp  Renderer2D.cpp  Runtime2D.cpp  RuntimeQueries.cpp  Scene.cpp  SceneManager.cpp  Scripting.cpp  SnakeAuthoring.cpp  TilemapAuthoring.cpp  Window.cpp
tools/FaahhderPacker/: CMakeLists.txt
tools/FaahhderPacker/src/: main.cpp
